manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: games
  labels:
    name: games
