manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games
  namespace: games
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-url: https://login.gduque.fr/akprox/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: https://login.gduque.fr/akprox/start
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
spec:
  tls:
  - hosts:
      - games.gduque.fr
    secretName: games-tls
  rules:
  - host: games.gduque.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: citadels-js
            port:
              number: 3000
